# sortings

./: pyproject.toml
.github/workflows/: run_test.yml
src/: launch.py
src/sortings.egg-info/: PKG-INFO  SOURCES.txt
src/sorts/: __init__.py  bubblesort.py  heapsort.py  mergesort.py  qsort.py
tests/: test_bubble.py  test_qsort.py
